--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "tg-forms",
   "version": "0.1.2",
   "description": "Simple JavaScript Library for sending and creating telegram forms",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json",
+    "docs": "typedoc",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "format": "prettier --write --check \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bytech-Uzbekistan/tg-forms.git"
@@ -15,6 +30,9 @@
     "Forms"
   ],
   "author": "Mukhammadyusuf Abdurakhimov",
+  "contributors": [
+    "UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Bytech-Uzbekistan/tg-forms/issues"
@@ -22,5 +40,15 @@
   "homepage": "https://github.com/Bytech-Uzbekistan/tg-forms#readme",
   "dependencies": {
     "axios": "^0.24.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.4"
   }
 }
